# magnum-plugins

./: .clang-format  .cmake-format.py  .gitignore
modules/: FindMagnum.cmake
src/MagnumPlugins/: CMakeLists.txt
src/MagnumPlugins/GStVideoImporter/: CMakeLists.txt  GStVideoImporter.conf  GStVideoImporter.cpp  GStVideoImporter.h  GStVideoRenderer.cpp  GStVideoRenderer.h  importStaticPlugin.cpp
src/MagnumPlugins/GstVideoImporter/: CMakeLists.txt  GstVideoImporter.cpp  GstVideoImporter.h  configure.h.cmake  importStaticPlugin.cpp
